code. Set Diagnosis.ViewModels.Search namespace

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -186,7 +186,7 @@
     <Compile Include="Interfaces\IFilter.cs" />
     <Compile Include="Interfaces\IHierarchical.cs" />
     <Compile Include="Interfaces\IHierarchicalCheckable.cs" />
-    <Compile Include="Interfaces\ISimpleSearcher.cs" />
+    <Compile Include="Search\Searchers\ISimpleSearcher.cs" />
     <Compile Include="Screens\PatientViewer.cs" />
     <Compile Include="Producers\DiagnosisProducer.cs" />
     <Compile Include="Producers\EntityProducers.cs" />
@@ -209,15 +209,15 @@
     <Compile Include="Search\Autocomplete\Autocomplete.cs" />
     <Compile Include="Search\Autocomplete\Recognizer.cs" />
     <Compile Include="Search\Autocomplete\Tag.cs" />
-    <Compile Include="Search\NewFilter.cs" />
-    <Compile Include="Search\Filter.cs" />
-    <Compile Include="Search\HierarchicalSearchSettings.cs" />
+    <Compile Include="Search\Filter\NewFilterViewModel.cs" />
+    <Compile Include="Search\Filter\FilterViewModel.cs" />
+    <Compile Include="Search\Searchers\HierarchicalSearchSettings.cs" />
     <Compile Include="Search\HrSearchOptions.cs" />
     <Compile Include="Search\HrSearchResultViewModel.cs" />
     <Compile Include="Search\NewSearchers\DiagnosisSearchers.cs" />
     <Compile Include="Search\NewSearchers\INewSearcher.cs" />
     <Compile Include="Search\NewSearchers\WordSearchers.cs" />
-    <Compile Include="Search\PopupSearch.cs" />
+    <Compile Include="Search\Searchers\PopupSearchViewModel.cs" />
     <Compile Include="Search\Searchers\DiagnosisFiltratingSearcher.cs" />
     <Compile Include="Search\Searchers\DiagnosisSearcher.cs" />
     <Compile Include="Search\Searchers\HrSearcher.cs" />
