--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -159,8 +159,8 @@
     <Compile Include="Screens\Card\ShortAppointmentViewModel.cs" />
     <Compile Include="Screens\Card\ShortCourseViewModel.cs" />
     <Compile Include="Screens\Card\PatientViewModel.cs" />
-    <Compile Include="Screens\HrViewer.cs" />
-    <Compile Include="Screens\ScreenBase.cs" />
+    <Compile Include="Screens\Card\Managers\HrViewer.cs" />
+    <Compile Include="Framework\ScreenBase.cs" />
     <Compile Include="Screens\Shell\OverlayServiceViewModel.cs" />
     <Compile Include="Screens\Shell\UndoOverlayViewModel.cs" />
     <Compile Include="Screens\Words\WordEditorViewModel.cs" />
@@ -171,7 +171,7 @@
     <Compile Include="Screens\Card\AppointmentViewModel.cs" />
     <Compile Include="Screens\Card\Managers\CoursesManager.cs" />
     <Compile Include="Screens\Card\CourseWithSpecialCaseViewModel.cs" />
-    <Compile Include="Screens\Card\DiagnosisViewModel.cs" />
+    <Compile Include="Screens\DiagnosisViewModel.cs" />
     <Compile Include="Screens\Card\Managers\HealthRecordManager.cs" />
     <Compile Include="Screens\Card\HealthRecordViewModel.cs" />
     <Compile Include="Screens\Words\WordViewModel.cs" />
@@ -187,7 +187,7 @@
     <Compile Include="Interfaces\IHierarchical.cs" />
     <Compile Include="Interfaces\IHierarchicalCheckable.cs" />
     <Compile Include="Search\Searchers\ISimpleSearcher.cs" />
-    <Compile Include="Screens\PatientViewer.cs" />
+    <Compile Include="Screens\Card\Managers\PatientViewer.cs" />
     <Compile Include="Producers\DiagnosisProducer.cs" />
     <Compile Include="Producers\EntityProducers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
