model. Add Comment entity as second possible IHrItemObject
just wrapper for new HrItem.TextRepr field

--HG--
branch : f/SimpleTags

--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -139,6 +139,7 @@
   <ItemGroup>
     <Compile Include="EmptyChecker.cs" />
     <Compile Include="Entities\HrItem.cs" />
+    <Compile Include="Entities\Comment.cs" />
     <Compile Include="HealthRecordUnits.cs" />
     <Compile Include="DoctorSettings.cs" />
     <Compile Include="Entities\Measure.cs" />
