data. Switch to SQL CE 4.0 because of unicode support in sqlite

--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -51,6 +51,7 @@
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
       </dependentAssembly>
+      <qualifyAssembly partialName="System.Data.SqlServerCe" fullName="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </assemblyBinding>
   </runtime>
 </configuration>
