--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Entities\Word.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidatableEntity.cs" />
+    <Compile Include="Validators\CourseValidator.cs" />
     <Compile Include="Validators\PatientValidator.cs" />
   </ItemGroup>
   <ItemGroup>
