add Course Editor

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -154,6 +154,7 @@
     <Compile Include="AuthorityController.cs" />
     <Compile Include="Framework\DialogViewModel.cs" />
     <Compile Include="Framework\IDialog.cs" />
+    <Compile Include="Screens\Card\CourseEditorViewModel.cs" />
     <Compile Include="Screens\Card\CourseViewModel.cs" />
     <Compile Include="Screens\Card\HrListViewModel.cs" />
     <Compile Include="Screens\Card\Managers\AppointmentsManager.cs" />
