--- a/Diagnosis.Common/Diagnosis.Common.csproj
+++ b/Diagnosis.Common/Diagnosis.Common.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A91AD3B7-CB0F-426C-A539-1CFFC13DF0EE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Diagnosis.Core</RootNamespace>
-    <AssemblyName>Diagnosis.Core</AssemblyName>
+    <RootNamespace>Diagnosis.Common</RootNamespace>
+    <AssemblyName>Diagnosis.Common</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <CodeContractsAssemblyMode>0</CodeContractsAssemblyMode>
