ui. Save window position and state netween sessions

--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -2,6 +2,9 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Diagnosis.App.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <log4net>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
@@ -54,4 +57,23 @@
       <qualifyAssembly partialName="System.Data.SqlServerCe" fullName="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"/>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <Diagnosis.App.Properties.Settings>
+      <setting name="MainWindowTop" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="MainWindowLeft" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="MainWindowHeight" serializeAs="String">
+        <value>600</value>
+      </setting>
+      <setting name="MainWindowWidth" serializeAs="String">
+        <value>800</value>
+      </setting>
+      <setting name="MainWindowState" serializeAs="String">
+        <value>Normal</value>
+      </setting>
+    </Diagnosis.App.Properties.Settings>
+  </userSettings>
 </configuration>
