--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -360,6 +360,9 @@
     <Compile Include="Controls\Common\FullTree.xaml.cs">
       <DependentUpon>FullTree.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\AppointmentEditorWindow.xaml.cs">
+      <DependentUpon>AppointmentEditorWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\CourseEditorWindow.xaml.cs">
       <DependentUpon>CourseEditorWindow.xaml</DependentUpon>
     </Compile>
@@ -536,6 +539,10 @@
     <Page Include="Styles\SharedStyles.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\AppointmentEditorWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Windows\CourseEditorWindow.xaml">
       <SubType>Designer</SubType>
