--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -154,6 +154,7 @@
     <Compile Include="AuthorityController.cs" />
     <Compile Include="Framework\DialogViewModel.cs" />
     <Compile Include="Framework\IDialog.cs" />
+    <Compile Include="Screens\Card\AppointmentEditorViewModel.cs" />
     <Compile Include="Screens\Card\Navigator.cs" />
     <Compile Include="Screens\Card\Saver.cs" />
     <Compile Include="Screens\Card\CardItemViewModel.cs" />
