autocomplete. Add invariants
--HG--
branch : f/CopyPasteTags

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -250,6 +250,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Screens\Card\Card.cd" />
+    <None Include="Search\Autocomplete\CodeMap1.dgml" />
     <None Include="Search\SearchClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup />
