--- a/Diagnosis.ViewModels/packages.config
+++ b/Diagnosis.ViewModels/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentValidation" version="5.4.0.0" targetFramework="net40" />
+  <package id="gong-wpf-dragdrop" version="0.1.4.3" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="LinqSpecs" version="1.0" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
