Delete empty log files

--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -13,7 +13,7 @@
       </layout>      
     </appender>
     <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <lockingModel type="Diagnosis.App.App+MyLock" />
       <file value="Logs\\" />
       <datePattern value="yyyy.MM.dd'.log'" />
       <staticLogFileName value="false" />
