--- a/Diagnosis.App/packages.config
+++ b/Diagnosis.App/packages.config
@@ -3,6 +3,7 @@
   <package id="gong-wpf-dragdrop" version="0.1.4.3" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
   <package id="NHibernate.JetDriver" version="2.0.0.1001" targetFramework="net40" />
   <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net40" />
