card. Add Header

--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -225,6 +225,9 @@
     <Compile Include="Controls\CardParts\CardItem.xaml.cs">
       <DependentUpon>CardItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\CardParts\Header.xaml.cs">
+      <DependentUpon>Header.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Headers\Appointment.xaml.cs">
       <DependentUpon>Appointment.xaml</DependentUpon>
     </Compile>
@@ -398,6 +401,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Controls\CardParts\CardItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\CardParts\Header.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
