--- a/Diagnosis.App/Diagnosis.App.csproj
+++ b/Diagnosis.App/Diagnosis.App.csproj
@@ -312,6 +312,9 @@
     <Compile Include="Controls\Search\PopupSearch.xaml.cs">
       <DependentUpon>PopupSearch.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\IcdSelectorWindow.xaml.cs">
+      <DependentUpon>IcdSelectorWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\PatientEditorWindow.xaml.cs">
       <DependentUpon>PatientEditorWindow.xaml</DependentUpon>
     </Compile>
@@ -495,6 +498,10 @@
     <Page Include="Controls\Search\PopupSearch.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\IcdSelectorWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Windows\PatientEditorWindow.xaml">
       <SubType>Designer</SubType>
