--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -223,8 +223,8 @@
     <Compile Include="Search\FilterViewModel.cs" />
     <Compile Include="Search\HrSearchOptions.cs" />
     <Compile Include="Search\HrSearchResultViewModel.cs" />
-    <Compile Include="Search\NewSearchers\DiagnosisSearchers.cs" />
-    <Compile Include="Search\NewSearchers\WordSearchers.cs" />
+    <Compile Include="Search\SpecSearchers\DiagnosisSearchers.cs" />
+    <Compile Include="Search\SpecSearchers\WordSearchers.cs" />
     <Compile Include="Search\Searchers\PopupSearchViewModel.cs" />
     <Compile Include="Search\Searchers\DiagnosisFiltratingSearcher.cs" />
     <Compile Include="Search\Searchers\DiagnosisSearcher.cs" />
