data. Add FluentMigrator

--- a/Diagnosis.App/App.config
+++ b/Diagnosis.App/App.config
@@ -55,6 +55,10 @@
         <bindingRedirect oldVersion="0.0.0.0-1.2.13.0" newVersion="1.2.13.0" />
       </dependentAssembly>
       <qualifyAssembly partialName="System.Data.SqlServerCe" fullName="System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+      <dependentAssembly>
+        <assemblyIdentity name="FluentMigrator" publicKeyToken="aacfc7de5acabf05" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.1.0" newVersion="1.3.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
