--- a/Diagnosis.Data/packages.config
+++ b/Diagnosis.Data/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentMigrator" version="1.3.1.0" targetFramework="net40" />
+  <package id="FluentMigrator.Runner" version="1.3.1.0" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="LinqSpecs" version="1.0" targetFramework="net40" />
